<?xml version="1.0" encoding="utf-8"?>
<resources>
    <array name="languages">
        <item>Kotlin</item>
        <item>Java</item>
        <item>Python</item>
        <item>JavaScript</item>
        <item>Swift</item>
    </array>
</resources>