<resources>
    <string name="app_name">GitHubApp</string>
    <string name="title_home">Home</string>
    <string name="title_trending_topics">Topics</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="select_language">选择编程语言</string>
    <string name="search_hint">输入搜索关键词</string>
    <string name="search">搜索</string>
    <string name="recently_popular_repos">近七日最火Repo</string>
    <string name="author">Author: %1$s</string>
</resources>